<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="message_tv_activity_main">Check what is your body mass index</string>
    <string name="tv_activity_main_weight">Weight</string>
    <string name="tv_activity_main_weight_hint">Ex. 75.4</string>
    <string name="tv_activity_main_weight_unit">KG</string>
    <string name="tv_activity_main_height_unit">MT</string>
    <string name="tv_activity_main_height_hint">Ex. 1.87</string>
    <string name="tv_activity_main_height">Height</string>
    <string name="bt_activity_main_calc">Calc BMI</string>
    <string name="bt_activity_main_clear">Clear Fields</string>
    <string name="btn_activity_result_redo">RE-calculate</string>
    <string name="btn_activity_result_label">BMI Result</string>
</resources>