<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_activity_main_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/message_tv_activity_main"
        app:layout_constraintBottom_toTopOf="@+id/tv_activity_main_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <TextView
        android:id="@+id/tv_activity_main_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:text="@string/tv_activity_main_weight"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_activity_main_height"
        app:layout_constraintEnd_toStartOf="@+id/et_activity_main_weight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_main_message" />

    <EditText
        android:id="@+id/et_activity_main_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/tv_activity_main_weight_hint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_activity_main_weight"
        app:layout_constraintEnd_toStartOf="@+id/tv_activity_main_weight_unit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_activity_main_weight"
        android:importantForAutofill="no"
        app:layout_constraintTop_toTopOf="@+id/tv_activity_main_weight" />


    <TextView
        android:id="@+id/tv_activity_main_weight_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_activity_main_weight_unit"
        app:layout_constraintBottom_toBottomOf="@+id/et_activity_main_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/et_activity_main_weight"
        app:layout_constraintTop_toTopOf="@+id/et_activity_main_weight" />


    <TextView
        android:id="@+id/tv_activity_main_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:text="@string/tv_activity_main_height"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_activity_main_calc"
        app:layout_constraintEnd_toStartOf="@+id/et_activity_main_height"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_main_weight" />

    <EditText
        android:id="@+id/et_activity_main_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/tv_activity_main_height_hint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_activity_main_height"
        app:layout_constraintEnd_toStartOf="@+id/tv_activity_main_height_unit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_activity_main_height"
        android:importantForAutofill="no"
        app:layout_constraintTop_toTopOf="@+id/tv_activity_main_height" />


    <TextView
        android:id="@+id/tv_activity_main_height_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_activity_main_height_unit"
        app:layout_constraintBottom_toBottomOf="@+id/et_activity_main_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/et_activity_main_height"
        app:layout_constraintTop_toTopOf="@+id/et_activity_main_height" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_activity_main_calc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/bt_activity_main_calc"
        app:layout_constraintBottom_toTopOf="@+id/bt_activity_main_clear"
        app:layout_constraintEnd_toEndOf="@id/bt_activity_main_clear"
        app:layout_constraintStart_toStartOf="@id/bt_activity_main_clear"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_main_height" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_activity_main_clear"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bt_activity_main_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_activity_main_calc" />


</androidx.constraintlayout.widget.ConstraintLayout>